// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

//edition = "2023";
syntax = "proto3";
import "proto/any.proto";
//option features.field_presence = IMPLICIT;
option go_package = "github.com/iznilul/booking_rpc";
//option java_multiple_files = true;
//option java_package = "io.grpc.examples.routeguide";
//option java_outer_classname = "RouteGuideProto";
//protoc --go_out=. --go_opt=paths=source_relative     --go-grpc_out=. --go-grpc_opt=paths=source_relative     proto/booking/booking-rpc.proto

package borpc;

// Interface exported by the server.
service BookingRPC {
  rpc FindMiniUser(RequestAO) returns (ResponseVO) {}
  rpc FindMiniUserList(RequestAO) returns (ResponseVO) {}
  rpc FindMiniUserListByOpenIDList(RequestAO) returns (ResponseVO) {}
  rpc SendMiniMsg(RequestAO) returns (ResponseVO) {}
  rpc QueryIndicatorCount(RequestAO) returns (ResponseVO) {}
  rpc QueryIndicatorDetail(RequestAO) returns (ResponseVO) {}
  rpc CalculateUserIndicator(RequestAO) returns (ResponseVO) {}
}

message ResponseVO {
  int32 code = 1;
  string msg = 2;
  google.protobuf.Any data = 3;
  repeated google.protobuf.Any dataList = 4;
  google.protobuf.Any map = 5;
  repeated google.protobuf.Any mapList = 6;
}

message KeyValue {
  string key = 1;
  google.protobuf.Any value = 2;
}

message RequestAO {
  google.protobuf.Any data = 1;
  repeated google.protobuf.Any dataList = 2;
  google.protobuf.Any map = 3;
  repeated google.protobuf.Any mapList = 4;
}